07_retirement/grade.txt
Grading at Mon Jun 29 06:54:17 UTC 2020
Attempting to compile retirement.c
retirement.c:10:9: error: unknown type name ‘_retire_info’
 typedef _retire_info retire_info;
         ^
retirement.c: In function ‘calculateBalance’:
retirement.c:13:45: error: request for member ‘rate_of_return’ in something not a structure or union
   totalBalance+= totalBalance * retireStatus.rate_of_return;
                                             ^
retirement.c:14:36: error: request for member ‘contribution’ in something not a structure or union
   return totalBalance+ retireStatus.contribution;
                                    ^
retirement.c: In function ‘retirement’:
retirement.c:26:24: error: request for member ‘months’ in something not a structure or union
   for(int i=0;i<working.months;i++){
                        ^
retirement.c:32:24: error: request for member ‘months’ in something not a structure or union
   for(int i=0;i<retired.months;i++){
                        ^
retirement.c: In function ‘main’:
retirement.c:43:10: error: request for member ‘months’ in something not a structure or union
   working.months=489;
          ^
retirement.c:44:10: error: request for member ‘contribution’ in something not a structure or union
   working.contribution=1000;
          ^
retirement.c:45:10: error: request for member ‘rate_of_return’ in something not a structure or union
   working.rate_of_return=0.045/12;
          ^
retirement.c:47:10: error: request for member ‘months’ in something not a structure or union
   retired.months=384;
          ^
retirement.c:48:10: error: request for member ‘contribution’ in something not a structure or union
   retired.contribution=-4000;
          ^
retirement.c:49:10: error: request for member ‘rate_of_return’ in something not a structure or union
   retired.rate_of_return=0.01/12;
          ^
retirement.c: In function ‘calculateBalance’:
retirement.c:15:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
